--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -14,7 +14,10 @@
         <li><a class="nav-link" href="/cart">
             <i class="fas fa-shopping-cart"></i>
           </a></li>
-          <hr class="dropdown-divider">
+        <li><a class="nav-link text-decoration-none" href="/chat/index.html">
+            Chat📩
+          </a></li>
+        <hr class="dropdown-divider">
         </li>
         <li><a class="dropdown-item" href="/user/exit">Log Out</a></li>
       </ul>
